Payment pages, provider myCharities added but not functioning.

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,8 +34,8 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
+  primary:    lightblue,
+  secondary:  rgb(220, 231, 245),
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
@@ -86,3 +86,4 @@ $colors: (
 
 @import "roboto";
 @import "noto-sans";
+
