--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -1,3 +1,19 @@
 page-details {
-
+    .toolbar-title-md {
+        text-align: center;
+        clear: both;
+    }
+    .content{
+        img {
+            display: inline-block;
+            size: 20%;
+        }
+        .button-large-md {
+            height: 2.8em;
+            font-size: 1.5rem;
+            display: inline-block;
+            padding: 0 1em;
+            text-align: center;
+        }
+    }
 }
