--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -3,6 +3,7 @@
 }
 .content{
     background-color: lightblue;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     button{
         background-color: darkblue;
         color: white;
