--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -11,9 +11,22 @@ page-details {
         .button-large-md {
             height: 2.8em;
             font-size: 1.5rem;
-            display: inline-block;
-            padding: 0 1em;
-            text-align: center;
+            display: block;
+            margin: 0 auto;
+            padding: 2em;
+        }
+        a{
+            color:blueviolet;
+        }
+        .heading{
+            font-size: 2.25rem;
+            color: cornflowerblue;
+        }
+        .donationDetails{
+            font-size: 2.5rem;
+            color: white;
+            font-weight: 500;
+            line-height: .5rem;
         }
     }
 }
