--- a/src/pages/my-charities/my-charities.scss
+++ b/src/pages/my-charities/my-charities.scss
@@ -1,3 +1,19 @@
 page-my-charities {
-
+    .card{
+        height: 32rem;
+        background-color: aliceblue;
+        img{
+            padding: 1em;
+        }
+        .card-title-md{
+            font-size: 2rem;
+            font-weight: bold;
+        }
+        p{
+            color: silver;
+        }
+        ion-icon{
+            float: left;
+        }
+    }
 }
